--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react-native": "0.64.1",
     "react-native-elements": "^3.4.1",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
